<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>cellsociety_team01</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
          <encoding>iso-8859-1</encoding>
          <includes>
            <include>src/**/*.java</include>
          </includes>
          <source>15</source>
          <target>15</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.0</version>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <configuration>
          <configLocation>google_checks.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <encoding>UTF-8</encoding>
          <linkXRef>false</linkXRef>
        </configuration>
        <dependencies>
          <dependency>
            <artifactId>checkstyle</artifactId>
            <groupId>com.puppycrawl.tools</groupId>
            <version>8.40</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <id>validate</id>
            <phase>validate</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.1.1</version>
      </plugin>
    </plugins>
    <resources>
      <!-- external data files -->
      <resource>
        <directory>data</directory>
      </resource>
      <!-- internal resource files also need to be included, but not directly -->
      <resource>
        <directory>src</directory>
      </resource>
    </resources>
    <sourceDirectory>src</sourceDirectory>
  </build>
  <groupId>CompSci308_2021Spring</groupId>
  <modelVersion>4.0.0</modelVersion>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>iso-8859-1</project.build.sourceEncoding>
  </properties>

  <version>master-SNAPSHOT</version>
</project>
